--- a/kadai_014/style.css
+++ b/kadai_014/style.css
@@ -7,6 +7,7 @@ body {
   font-family: "Arial", "Meiryo", sans-serif;
     /* 中央揃え */
   text-align: center;
+
 /* 色のクラスを設定 */
   .text-pink {
     color:rgb(255, 192, 203);
@@ -14,6 +15,7 @@ body {
   .text-skyblue {
     color: skyblue;
   }
+  
   /* 子要素への太字反映 */
   #basic p {
     font-weight: bold;
@@ -29,12 +31,11 @@ h1 {
   /* 中央揃え */
   text-align: center;
   /* フォントサイズはルート要素の2倍 */
-  font-size=2rem;
+  font-size: 2rem;
    /* 文字間設定：文字の大きさの1.2倍 */
   letter-spacing: 2.4rem;
   /* 影を付ける */
   text-shadow: 10px 5px 3px black;
   border-bottom: solid 3px rgb(115, 115, 114);
-
 }
 
