--- a/kadai_013/style.css
+++ b/kadai_013/style.css
@@ -137,7 +137,7 @@ PC用のスタイル
     #nav-sp > .menu {
       text-decoration: none;
       display: block;
-      margin: 0 20px;
+      margin: 0px 20px;
       height: 44px;
       font-size: 16px;
       background-image: url("images/arrow.png");
